--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/oyq2xai.css">
 </head>
 <body>
     <header class="primary">
@@ -120,73 +121,106 @@
     <!--Section & Articles-->
     <section class="writing-skills">
         <article class="article-5">
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col-md">    
                 <h1>WRITING</h1>
                 <p><q>Design is intelligence made visible.</q> -- Alina Wheeler, author</p>
                 <p><q>Every great design begins with an even better story.</q> -- Lorinda Mamo, designer and creative director</p></div>
             <div class="col-md">        
-                <a href="technical-doc.html"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    viewBox="0 0 400 400" enable-background="new 0 0 400 400" xml:space="preserve">
+                <a href="technical-doc.html"><svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 400 130.77" enable-background="new 0 0 400 130.77" xml:space="preserve">
                <g>
-                   <path d="M6.52,170.33v13.24H2.6v-13.24H0.96v-3.6H2.6v-6.16h3.92v6.16h3v3.6H6.52z"/>
-                   <path d="M27.24,179.73c-0.72,1.28-1.76,2.4-2.84,3.08c-1.36,0.88-3.16,1.28-4.96,1.28c-2.24,0-4.08-0.56-5.68-2.16
+                   <path d="M6.52,35.18v13.24H2.6V35.18H0.96v-3.6H2.6v-6.16h3.92v6.16h3v3.6H6.52z"/>
+                   <path d="M27.24,44.58c-0.72,1.28-1.76,2.4-2.84,3.08c-1.36,0.88-3.16,1.28-4.96,1.28c-2.24,0-4.08-0.56-5.68-2.16
                        c-1.6-1.6-2.48-3.92-2.48-6.44c0-2.6,0.92-5.12,2.68-6.92c1.4-1.4,3.24-2.28,5.64-2.28c2.68,0,4.4,1.16,5.4,2.2
                        c2.16,2.24,2.36,5.36,2.36,7.12v0.48H15.28c0.08,1.2,0.6,2.56,1.44,3.4c0.92,0.92,2.04,1.08,3,1.08c1.08,0,1.88-0.24,2.68-0.84
-                       c0.68-0.52,1.2-1.2,1.56-1.84L27.24,179.73z M23.36,172.89c-0.16-0.92-0.6-1.72-1.2-2.28c-0.52-0.48-1.36-0.96-2.64-0.96
+                       c0.68-0.52,1.2-1.2,1.56-1.84L27.24,44.58z M23.36,37.74c-0.16-0.92-0.6-1.72-1.2-2.28c-0.52-0.48-1.36-0.96-2.64-0.96
                        c-1.36,0-2.24,0.56-2.76,1.08c-0.56,0.52-1,1.32-1.2,2.16H23.36z"/>
-                   <path d="M44.48,171.89c-1.8-1.76-3.56-2.08-4.76-2.08c-1.84,0-3,0.76-3.72,1.48c-0.72,0.72-1.44,2-1.44,3.88
+                   <path d="M44.48,36.74c-1.8-1.76-3.56-2.08-4.76-2.08c-1.84,0-3,0.76-3.72,1.48c-0.72,0.72-1.44,2-1.44,3.88
                        c0,1.96,0.76,3.28,1.52,4.04c0.88,0.84,2.12,1.36,3.56,1.36c1.6,0,3.48-0.64,4.84-2.16v4.36c-0.96,0.6-2.52,1.32-5.12,1.32
                        c-2.8,0-4.8-0.8-6.4-2.48c-1.2-1.24-2.4-3.24-2.4-6.32c0-3.16,1.32-5.28,2.56-6.52c1.32-1.32,3.44-2.48,6.76-2.48
-                       c1.28,0,2.8,0.2,4.6,1.2V171.89z"/>
-                   <path d="M48.24,154.42h3.92v13.76c1.68-1.72,3.52-1.88,4.52-1.88c3.08,0,4.48,1.6,4.96,2.28c1.04,1.52,1.08,3.48,1.08,4.68v10.32
+                       c1.28,0,2.8,0.2,4.6,1.2V36.74z"/>
+                   <path d="M48.24,19.26h3.92v13.76c1.68-1.72,3.52-1.88,4.52-1.88c3.08,0,4.48,1.6,4.96,2.28c1.04,1.52,1.08,3.48,1.08,4.68v10.32
                        H58.8v-9.96c0-1,0-2.08-0.76-2.92c-0.44-0.48-1.2-0.88-2.2-0.88c-1.32,0-2.36,0.64-2.88,1.4c-0.56,0.8-0.8,2.08-0.8,4.24v8.12
-                       h-3.92V154.42z"/>
-                   <path d="M67.64,166.73h3.92v1.56c1.68-1.88,3.6-2,4.56-2c3.12,0,4.44,1.56,4.96,2.28c0.64,0.92,1.04,2.08,1.04,4.68v10.32H78.2
-                       v-9.36c0-4.28-1.6-4.4-3.08-4.4c-1.76,0-3.56,0.24-3.56,5.68v8.08h-3.92V166.73z"/>
-                   <path d="M89.04,157.25c1.44,0,2.52,1.08,2.52,2.52c0,1.44-1.08,2.52-2.52,2.52c-1.44,0-2.52-1.08-2.52-2.52
-                       C86.52,158.33,87.6,157.25,89.04,157.25z M91,166.73v16.84h-3.92v-16.84H91z"/>
-                   <path d="M109,171.89c-1.8-1.76-3.56-2.08-4.76-2.08c-1.84,0-3,0.76-3.72,1.48c-0.72,0.72-1.44,2-1.44,3.88
+                       h-3.92V19.26z"/>
+                   <path d="M67.64,31.58h3.92v1.56c1.68-1.88,3.6-2,4.56-2c3.12,0,4.44,1.56,4.96,2.28c0.64,0.92,1.04,2.08,1.04,4.68v10.32H78.2
+                       v-9.36c0-4.28-1.6-4.4-3.08-4.4c-1.76,0-3.56,0.24-3.56,5.68v8.08h-3.92V31.58z"/>
+                   <path d="M89.04,22.1c1.44,0,2.52,1.08,2.52,2.52c0,1.44-1.08,2.52-2.52,2.52c-1.44,0-2.52-1.08-2.52-2.52
+                       C86.52,23.18,87.6,22.1,89.04,22.1z M91,31.58v16.84h-3.92V31.58H91z"/>
+                   <path d="M109,36.74c-1.8-1.76-3.56-2.08-4.76-2.08c-1.84,0-3,0.76-3.72,1.48c-0.72,0.72-1.44,2-1.44,3.88
                        c0,1.96,0.76,3.28,1.52,4.04c0.88,0.84,2.12,1.36,3.56,1.36c1.6,0,3.48-0.64,4.84-2.16v4.36c-0.96,0.6-2.52,1.32-5.12,1.32
                        c-2.8,0-4.8-0.8-6.4-2.48c-1.2-1.24-2.4-3.24-2.4-6.32c0-3.16,1.32-5.28,2.56-6.52c1.32-1.32,3.44-2.48,6.76-2.48
-                       c1.28,0,2.8,0.2,4.6,1.2V171.89z"/>
-                   <path d="M125.08,166.73h3.92v16.84h-3.92v-1.76c-1.72,2-3.84,2.28-5.04,2.28c-5.2,0-8.16-4.32-8.16-8.96c0-5.48,3.76-8.84,8.2-8.84
-                       c1.24,0,3.4,0.32,5,2.4V166.73z M115.88,175.21c0,2.92,1.84,5.36,4.68,5.36c2.48,0,4.76-1.8,4.76-5.32c0-3.68-2.28-5.44-4.76-5.44
-                       C117.72,169.81,115.88,172.21,115.88,175.21z"/>
-                   <path d="M137.88,154.42v29.16h-3.92v-29.16H137.88z"/>
+                       c1.28,0,2.8,0.2,4.6,1.2V36.74z"/>
+                   <path d="M125.08,31.58h3.92v16.84h-3.92v-1.76c-1.72,2-3.84,2.28-5.04,2.28c-5.2,0-8.16-4.32-8.16-8.96c0-5.48,3.76-8.84,8.2-8.84
+                       c1.24,0,3.4,0.32,5,2.4V31.58z M115.88,40.06c0,2.92,1.84,5.36,4.68,5.36c2.48,0,4.76-1.8,4.76-5.32c0-3.68-2.28-5.44-4.76-5.44
+                       C117.72,34.66,115.88,37.06,115.88,40.06z"/>
+                   <path d="M137.88,19.26v29.16h-3.92V19.26H137.88z"/>
                </g>
                <g>
-                   <path d="M11.33,191.63c6.51,0,12.18,0.7,17.36,4.55c5.67,4.27,8.96,11.06,8.96,18.83c0,7.77-3.22,14.49-9.38,18.83
-                       c-5.46,3.85-10.57,4.48-17.08,4.48H1.53v-46.69H11.33z M8.67,231.6h3.08c3.5,0,8.33-0.28,12.39-3.29c3.22-2.45,6.37-6.93,6.37-13.3
-                       c0-6.16-2.94-10.99-6.3-13.44c-4.06-2.94-9.03-3.22-12.46-3.22H8.67V231.6z"/>
-                   <path d="M92.95,215.01c0,13.72-10.29,24.22-24.29,24.22s-24.29-10.5-24.29-24.22c0-13.72,10.29-24.22,24.29-24.22
-                       S92.95,201.29,92.95,215.01z M85.81,215.01c0-10.36-7.14-17.64-17.15-17.64c-10.01,0-17.15,7.28-17.15,17.64
-                       c0,10.36,7.14,17.64,17.15,17.64C78.67,232.65,85.81,225.37,85.81,215.01z"/>
-                   <path d="M136.49,202.55c-5.18-4.69-10.01-5.18-12.67-5.18c-10.15,0-17.01,7.49-17.01,17.78c0,9.87,7.14,17.5,17.08,17.5
+                   <path d="M11.33,56.47c6.51,0,12.18,0.7,17.36,4.55c5.67,4.27,8.96,11.06,8.96,18.83c0,7.77-3.22,14.49-9.38,18.83
+                       c-5.46,3.85-10.57,4.48-17.08,4.48H1.53V56.47H11.33z M8.67,96.45h3.08c3.5,0,8.33-0.28,12.39-3.29c3.22-2.45,6.37-6.93,6.37-13.3
+                       c0-6.16-2.94-10.99-6.3-13.44c-4.06-2.94-9.03-3.22-12.46-3.22H8.67V96.45z"/>
+                   <path d="M92.95,79.85c0,13.72-10.29,24.22-24.29,24.22s-24.29-10.5-24.29-24.22c0-13.72,10.29-24.22,24.29-24.22
+                       S92.95,66.13,92.95,79.85z M85.81,79.85c0-10.36-7.14-17.64-17.15-17.64c-10.01,0-17.15,7.28-17.15,17.64
+                       c0,10.36,7.14,17.64,17.15,17.64C78.67,97.5,85.81,90.22,85.81,79.85z"/>
+                   <path d="M136.49,67.39c-5.18-4.69-10.01-5.18-12.67-5.18c-10.15,0-17.01,7.49-17.01,17.78c0,9.87,7.14,17.5,17.08,17.5
                        c5.6,0,9.94-2.87,12.6-5.39v8.47c-4.69,2.8-9.59,3.5-12.81,3.5c-8.47,0-13.79-3.85-16.52-6.44c-5.46-5.11-7.49-11.06-7.49-17.64
-                       c0-8.61,3.57-14.56,7.49-18.27c4.83-4.55,10.43-6.09,16.87-6.09c4.27,0,8.4,0.77,12.46,3.36V202.55z"/>
-                   <path d="M152.45,191.63v28.14c0,2.52,0.07,5.6,1.47,8.05c1.4,2.38,4.55,4.83,8.68,4.83c4.13,0,7.28-2.45,8.68-4.83
-                       c1.4-2.45,1.47-5.53,1.47-8.05v-28.14h7.14v30.03c0,3.71-0.77,8.19-4.34,12.11c-2.45,2.66-6.58,5.46-12.95,5.46
-                       c-6.37,0-10.5-2.8-12.95-5.46c-3.57-3.92-4.34-8.4-4.34-12.11v-30.03H152.45z"/>
-                   <path d="M189.69,238.32l9.8-50.2l16.24,36.26l16.38-36.26l8.82,50.2h-7.28l-4.76-28.14l-13.58,30.31l-13.44-30.38l-4.9,28.21
+                       c0-8.61,3.57-14.56,7.49-18.27c4.83-4.55,10.43-6.09,16.87-6.09c4.27,0,8.4,0.77,12.46,3.36V67.39z"/>
+                   <path d="M152.45,56.47v28.14c0,2.52,0.07,5.6,1.47,8.05c1.4,2.38,4.55,4.83,8.68,4.83c4.13,0,7.28-2.45,8.68-4.83
+                       c1.4-2.45,1.47-5.53,1.47-8.05V56.47h7.14v30.03c0,3.71-0.77,8.19-4.34,12.11c-2.45,2.66-6.58,5.46-12.95,5.46
+                       c-6.37,0-10.5-2.8-12.95-5.46c-3.57-3.92-4.34-8.4-4.34-12.11V56.47H152.45z"/>
+                   <path d="M189.69,103.17l9.8-50.2l16.24,36.26l16.38-36.26l8.82,50.2h-7.28l-4.76-28.14l-13.58,30.31l-13.44-30.38l-4.9,28.21
                        H189.69z"/>
-                   <path d="M276.49,198.35h-18.62v11.83h18.06v6.72h-18.06v14.7h18.62v6.72h-25.76v-46.69h25.76V198.35z"/>
-                   <path d="M285.73,238.32v-49.85l33.88,35.49v-32.34h7.14v49.56l-33.88-35.49v32.62H285.73z"/>
-                   <path d="M350.9,198.35v39.97h-7.14v-39.97h-10.71v-6.72h28.56v6.72H350.9z"/>
-                   <path d="M388.07,201.99c-0.42-1.05-1.05-2.03-2.1-2.94c-1.47-1.19-3.01-1.68-5.04-1.68c-4.34,0-6.58,2.59-6.58,5.6
+                   <path d="M276.49,63.19h-18.62v11.83h18.06v6.72h-18.06v14.7h18.62v6.72h-25.76V56.47h25.76V63.19z"/>
+                   <path d="M285.73,103.17V53.32l33.88,35.49V56.47h7.14v49.56l-33.88-35.49v32.62H285.73z"/>
+                   <path d="M350.9,63.19v39.97h-7.14V63.19h-10.71v-6.72h28.56v6.72H350.9z"/>
+                   <path d="M388.07,66.83c-0.42-1.05-1.05-2.03-2.1-2.94c-1.47-1.19-3.01-1.68-5.04-1.68c-4.34,0-6.58,2.59-6.58,5.6
                        c0,1.4,0.49,3.85,5.04,5.67l4.69,1.89c8.61,3.5,10.99,8.4,10.99,13.72c0,8.89-6.3,14.98-15.05,14.98c-5.39,0-8.61-2.03-10.99-4.69
                        c-2.52-2.8-3.64-5.88-3.92-9.1l7.07-1.54c0,2.31,0.84,4.48,1.96,5.95c1.33,1.68,3.29,2.8,6.09,2.8c4.34,0,7.7-3.15,7.7-7.84
                        c0-4.76-3.64-6.72-6.72-7.98l-4.48-1.89c-3.85-1.61-9.52-4.83-9.52-11.83c0-6.3,4.9-12.32,13.65-12.32c5.04,0,7.91,1.89,9.38,3.15
-                       c1.26,1.12,2.59,2.73,3.57,4.69L388.07,201.99z"/>
+                       c1.26,1.12,2.59,2.73,3.57,4.69L388.07,66.83z"/>
                </g>
-               </svg></a>
+               </svg>
+               </a>
             </div>
             <div class="col-md">        
                 <a href="reflection.html">
-                    <div class="inner">
-                            <img src="assets/images/reflection.png">
-                        </div>
-                    </a>
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 281.4 130.77" enable-background="new 0 0 281.4 130.77" xml:space="preserve">
+               <g>
+                   <path d="M66.94,69.51v24.43H61.9V69.51h-2.8v-4.62h2.8V52.22c0-2.66,0.21-6.02,2.8-8.19c1.4-1.19,3.5-1.89,5.81-1.89
+                       c1.82,0,3.01,0.42,3.57,0.63v4.9c-1.05-0.42-2.24-0.63-3.29-0.63c-1.12,0-2.45,0.28-3.22,1.54c-0.63,1.05-0.63,2.66-0.63,4.2v12.11
+                       h7.14v4.62H66.94z"/>
+                   <path d="M120.64,86.52c-0.84,1.61-2.1,3.36-3.57,4.69c-2.66,2.38-5.95,3.57-9.66,3.57c-7,0-14.35-4.41-14.35-15.19
+                       c0-8.68,5.32-15.4,14.07-15.4c5.67,0,9.24,2.8,10.99,5.32c1.82,2.59,2.87,7.07,2.73,10.92H98.23c0.07,6.02,4.2,9.87,9.24,9.87
+                       c2.38,0,4.27-0.7,5.95-2.1c1.33-1.12,2.38-2.59,3.01-3.99L120.64,86.52z M115.67,76.23c-0.84-4.55-4.27-7.56-8.54-7.56
+                       s-7.77,3.22-8.54,7.56H115.67z"/>
+                   <path d="M151.29,73.01c-2.66-3.36-6.51-4.34-9.1-4.34c-5.39,0-10.29,3.78-10.29,10.85s5.04,10.78,10.22,10.78
+                       c3.01,0,6.72-1.33,9.38-4.55v6.02c-3.15,2.31-6.51,3.01-9.24,3.01c-9.03,0-15.54-6.44-15.54-15.19c0-8.89,6.58-15.4,15.54-15.4
+                       c4.62,0,7.63,1.82,9.03,2.8V73.01z"/>
+                   <path d="M164.38,69.51v24.43h-5.04V69.51h-3.08v-4.62h3.08v-10.5h5.04v10.5h5.04v4.62H164.38z"/>
+                   <path d="M176.7,50.33c1.96,0,3.57,1.61,3.57,3.57c0,1.96-1.61,3.57-3.57,3.57s-3.57-1.61-3.57-3.57
+                       C173.13,51.94,174.74,50.33,176.7,50.33z M179.22,64.89v29.05h-5.04V64.89H179.22z"/>
+                   <path d="M186.92,79.52c0-8.82,6.51-15.33,15.4-15.33c8.89,0,15.4,6.51,15.4,15.33s-6.58,15.26-15.4,15.26
+                       C193.5,94.78,186.92,88.34,186.92,79.52z M192.1,79.52c0,7.14,5.04,10.78,10.22,10.78c5.25,0,10.22-3.71,10.22-10.78
+                       c0-7.14-4.9-10.85-10.22-10.85C197,68.67,192.1,72.45,192.1,79.52z"/>
+                   <path d="M225.42,64.89h5.04v3.36c0.91-1.19,3.5-4.06,8.33-4.06c3.43,0,6.58,1.4,8.33,3.99c1.47,2.17,1.68,4.55,1.68,7.77v17.99
+                       h-5.04V76.09c0-1.75-0.14-3.78-1.33-5.32c-0.98-1.26-2.52-2.1-4.76-2.1c-1.75,0-3.64,0.49-5.11,2.24c-1.96,2.31-2.1,5.74-2.1,7.84
+                       v15.19h-5.04V64.89z"/>
+                   <path d="M85.55,42.91v51.04h-5.04V42.91H85.55z"/>
+                   <path d="M53.32,86.59c-0.84,1.61-2.1,3.36-3.57,4.69c-2.66,2.38-5.95,3.57-9.66,3.57c-7,0-14.35-4.41-14.35-15.19
+                       c0-8.68,5.32-15.4,14.07-15.4c5.67,0,9.24,2.8,10.99,5.32c1.82,2.59,2.87,7.07,2.73,10.92H30.91c0.07,6.02,4.2,9.87,9.24,9.87
+                       c2.38,0,4.27-0.7,5.95-2.1c1.33-1.12,2.38-2.59,3.01-3.99L53.32,86.59z M48.18,75.81c-0.84-4.55-4.27-7.56-8.54-7.56
+                       s-7.77,3.22-8.54,7.56H48.18z"/>
+                   <g>
+                       <path d="M10.85,35.92c3.96,0,9.85,0.26,14.25,3.25c3.43,2.29,6.42,6.77,6.42,13.01c0,8.97-5.89,15.56-14.77,16.18L33.51,88.3
+                           l6.13,6.55l-12.17-0.27L9.62,68.9H7.95v25.68H1.44V35.92H10.85z M7.95,63.09h4.13c8.09,0,12.93-3.87,12.93-10.73
+                           c0-3.25-0.97-6.51-4.66-8.62c-2.64-1.49-5.63-1.67-8.44-1.67H7.95V63.09z"/>
+                   </g>
+               </g>
+               </svg>
+               
+                </a>
             </div>
         </div>
         </article>
