--- a/ux-campus-food.html
+++ b/ux-campus-food.html
@@ -11,10 +11,7 @@
 <link href="assets/css/style.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/oyq2xai.css">
 </head>
 <body>
     <header class="primary">
