--- a/projects.html
+++ b/projects.html
@@ -127,45 +127,42 @@
             <div class="col-md-3">
                 <a href="web-university-district.html">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    viewBox="0 0 186.13 136.34" enable-background="new 0 0 186.13 136.34" xml:space="preserve">
+                    viewBox="0 0 181.8 136.3" style="enable-background:new 0 0 181.8 136.3;" xml:space="preserve">
                <g>
-                   <path d="M107.58,103.98c1.99,0,3.72,0.21,5.31,1.39c1.73,1.31,2.74,3.38,2.74,5.76s-0.98,4.43-2.87,5.76
-                       c-1.67,1.18-3.23,1.37-5.22,1.37h-2.95v-14.28H107.58z M106.76,116.21h0.94c1.07,0,2.55-0.09,3.79-1.01
-                       c0.98-0.75,1.95-2.12,1.95-4.07c0-1.88-0.9-3.36-1.93-4.11c-1.24-0.9-2.76-0.98-3.81-0.98h-0.94V116.21z"/>
-                   <path d="M120.55,103.98v14.28h-2.18v-14.28H120.55z"/>
-                   <path d="M130.14,107.15c-0.13-0.32-0.32-0.62-0.64-0.9c-0.45-0.36-0.92-0.51-1.54-0.51c-1.33,0-2.01,0.79-2.01,1.71
-                       c0,0.43,0.15,1.18,1.54,1.73l1.43,0.58c2.63,1.07,3.36,2.57,3.36,4.2c0,2.72-1.93,4.58-4.6,4.58c-1.65,0-2.63-0.62-3.36-1.43
-                       c-0.77-0.86-1.11-1.8-1.2-2.78l2.16-0.47c0,0.71,0.26,1.37,0.6,1.82c0.41,0.51,1.01,0.86,1.86,0.86c1.33,0,2.35-0.96,2.35-2.4
-                       c0-1.46-1.11-2.05-2.05-2.44l-1.37-0.58c-1.18-0.49-2.91-1.48-2.91-3.62c0-1.93,1.5-3.77,4.17-3.77c1.54,0,2.42,0.58,2.87,0.96
-                       c0.38,0.34,0.79,0.83,1.09,1.43L130.14,107.15z"/>
-                   <path d="M138.55,106.04v12.22h-2.18v-12.22h-3.28v-2.06h8.73v2.06H138.55z"/>
-                   <path d="M146.3,103.98c1.73,0,2.85,0.21,3.77,0.83c1.56,1.05,1.69,2.74,1.69,3.36c0,2.05-1.26,3.55-3.17,3.98l4.45,6.1h-2.63
-                       l-4.09-5.84h-0.38v5.84h-2.18v-14.28H146.3z M145.93,110.53h0.68c0.6,0,3.04-0.06,3.04-2.33c0-2.01-1.91-2.21-2.98-2.21h-0.75
-                       V110.53z"/>
-                   <path d="M157.37,103.98v14.28h-2.18v-14.28H157.37z"/>
-                   <path d="M171.36,107.32c-1.58-1.43-3.06-1.58-3.88-1.58c-3.1,0-5.2,2.29-5.2,5.44c0,3.02,2.18,5.35,5.22,5.35
-                       c1.71,0,3.04-0.88,3.85-1.65v2.59c-1.43,0.86-2.93,1.07-3.92,1.07c-2.59,0-4.22-1.18-5.05-1.97c-1.67-1.56-2.29-3.38-2.29-5.39
-                       c0-2.63,1.09-4.45,2.29-5.59c1.48-1.39,3.19-1.86,5.16-1.86c1.31,0,2.57,0.24,3.81,1.03V107.32z"/>
-                   <path d="M178.02,106.04v12.22h-2.18v-12.22h-3.28v-2.06h8.73v2.06H178.02z"/>
-                   <path d="M89.64,17.8v57.21c0,5.12-0.23,11.38-4.78,16.37c-4.55,4.84-14.78,9.82-28.2,9.82c-13.42,0-23.65-4.98-28.2-9.82
-                       c-4.55-4.98-4.78-11.24-4.78-16.37V17.8H0.5v61.05c0,7.54,2.5,16.65,14.1,24.62c7.96,5.41,21.37,11.1,42.07,11.1
-                       c20.69,0,34.11-5.69,42.07-11.1c3.77-2.59,6.58-5.3,8.65-8.04V81.78h2.18v10.3c2.53-4.58,3.27-9.13,3.27-13.23V17.8H89.64z
-                        M103.96,96.93L93.6,86.08v9.98h-2.18V80.81l10.36,10.85v-9.89h2.18V96.93z"/>
-                   <path d="M115.27,81.78l3.98,9.96l3.98-9.96h2.35l-6.34,15.2l-6.34-15.2H115.27z"/>
-                   <path d="M135.26,83.83h-5.69v3.62h5.52v2.06h-5.52V94h5.69v2.05h-7.88V81.78h7.88V83.83z"/>
-                   <path d="M140.64,81.78c1.73,0,2.85,0.21,3.77,0.83c1.56,1.05,1.69,2.74,1.69,3.36c0,2.05-1.26,3.55-3.17,3.98l4.45,6.1h-2.63
-                       l-4.09-5.84h-0.38v5.84h-2.18V81.78H140.64z M140.27,88.33h0.68c0.6,0,3.04-0.06,3.04-2.33c0-2.01-1.91-2.21-2.98-2.21h-0.75V88.33
-                       z"/>
-                   <path d="M155.68,84.95c-0.13-0.32-0.32-0.62-0.64-0.9c-0.45-0.36-0.92-0.51-1.54-0.51c-1.33,0-2.01,0.79-2.01,1.71
-                       c0,0.43,0.15,1.18,1.54,1.73l1.43,0.58c2.63,1.07,3.36,2.57,3.36,4.2c0,2.72-1.93,4.58-4.6,4.58c-1.65,0-2.63-0.62-3.36-1.43
-                       c-0.77-0.86-1.11-1.8-1.2-2.78l2.16-0.47c0,0.71,0.26,1.37,0.6,1.82c0.41,0.51,1.01,0.86,1.86,0.86c1.33,0,2.35-0.96,2.35-2.4
-                       c0-1.46-1.11-2.05-2.05-2.44l-1.37-0.58c-1.18-0.49-2.91-1.48-2.91-3.62c0-1.93,1.5-3.77,4.17-3.77c1.54,0,2.42,0.58,2.87,0.96
-                       c0.38,0.34,0.79,0.83,1.09,1.43L155.68,84.95z"/>
-                   <path d="M162.75,81.78v14.28h-2.18V81.78H162.75z"/>
-                   <path d="M170.13,83.83v12.22h-2.18V83.83h-3.28v-2.06h8.73v2.06H170.13z"/>
-                   <path d="M178.76,89.89l-4.69-8.11h2.48l3.3,5.72l3.3-5.72h2.48l-4.69,8.11v6.17h-2.18V89.89z"/>
+                   <path d="M103.3,104c2,0,3.7,0.2,5.3,1.4c1.7,1.3,2.7,3.4,2.7,5.8s-1,4.4-2.9,5.8c-1.7,1.2-3.2,1.4-5.2,1.4h-2.9V104
+                       C100.3,104,103.3,104,103.3,104z M102.5,116.2h0.9c1.1,0,2.6-0.1,3.8-1c1-0.8,1.9-2.1,1.9-4.1c0-1.9-0.9-3.4-1.9-4.1
+                       c-1.2-0.9-2.8-1-3.8-1h-0.9V116.2z"/>
+                   <path d="M116.3,104v14.3h-2.2V104H116.3z"/>
+                   <path d="M125.8,107.2c-0.1-0.3-0.3-0.6-0.6-0.9c-0.4-0.4-0.9-0.5-1.5-0.5c-1.3,0-2,0.8-2,1.7c0,0.4,0.2,1.2,1.5,1.7l1.4,0.6
+                       c2.6,1.1,3.4,2.6,3.4,4.2c0,2.7-1.9,4.6-4.6,4.6c-1.7,0-2.6-0.6-3.4-1.4c-0.8-0.9-1.1-1.8-1.2-2.8l2.2-0.5c0,0.7,0.3,1.4,0.6,1.8
+                       c0.4,0.5,1,0.9,1.9,0.9c1.3,0,2.4-1,2.4-2.4c0-1.5-1.1-2.1-2.1-2.4l-1.4-0.6c-1.2-0.5-2.9-1.5-2.9-3.6c0-1.9,1.5-3.8,4.2-3.8
+                       c1.5,0,2.4,0.6,2.9,1c0.4,0.3,0.8,0.8,1.1,1.4L125.8,107.2z"/>
+                   <path d="M134.3,106v12.2h-2.2V106h-3.3V104h8.7v2.1H134.3z"/>
+                   <path d="M142,104c1.7,0,2.9,0.2,3.8,0.8c1.6,1.1,1.7,2.7,1.7,3.4c0,2.1-1.3,3.6-3.2,4l4.4,6.1h-2.6l-4.1-5.8h-0.4v5.8h-2.2V104
+                       L142,104L142,104z M141.6,110.5h0.7c0.6,0,3-0.1,3-2.3c0-2-1.9-2.2-3-2.2h-0.8L141.6,110.5L141.6,110.5z"/>
+                   <path d="M153.1,104v14.3h-2.2V104H153.1z"/>
+                   <path d="M167.1,107.3c-1.6-1.4-3.1-1.6-3.9-1.6c-3.1,0-5.2,2.3-5.2,5.4c0,3,2.2,5.3,5.2,5.3c1.7,0,3-0.9,3.9-1.7v2.6
+                       c-1.4,0.9-2.9,1.1-3.9,1.1c-2.6,0-4.2-1.2-5.1-2c-1.7-1.6-2.3-3.4-2.3-5.4c0-2.6,1.1-4.4,2.3-5.6c1.5-1.4,3.2-1.9,5.2-1.9
+                       c1.3,0,2.6,0.2,3.8,1L167.1,107.3L167.1,107.3z"/>
+                   <path d="M173.7,106v12.2h-2.2V106h-3.3V104h8.7v2.1H173.7z"/>
+                   <path d="M111,81.8l4,10l4-10h2.3L114.9,97l-6.3-15.2H111z"/>
+                   <path d="M131,83.8h-5.7v3.6h5.5v2.1h-5.5V94h5.7v2.1h-7.9V81.8h7.9V83.8z"/>
+                   <path d="M136.3,81.8c1.7,0,2.9,0.2,3.8,0.8c1.6,1.1,1.7,2.7,1.7,3.4c0,2.1-1.3,3.6-3.2,4l4.4,6.1h-2.6l-4.1-5.8H136v5.8h-2.2V81.8
+                       H136.3z M136,88.3h0.7c0.6,0,3-0.1,3-2.3c0-2-1.9-2.2-3-2.2H136L136,88.3L136,88.3z"/>
+                   <path d="M151.4,84.9c-0.1-0.3-0.3-0.6-0.6-0.9c-0.4-0.4-0.9-0.5-1.5-0.5c-1.3,0-2,0.8-2,1.7c0,0.4,0.1,1.2,1.5,1.7l1.4,0.6
+                       c2.6,1.1,3.4,2.6,3.4,4.2c0,2.7-1.9,4.6-4.6,4.6c-1.6,0-2.6-0.6-3.4-1.4c-0.8-0.9-1.1-1.8-1.2-2.8l2.2-0.5c0,0.7,0.3,1.4,0.6,1.8
+                       c0.4,0.5,1,0.9,1.9,0.9c1.3,0,2.4-1,2.4-2.4c0-1.5-1.1-2.1-2.1-2.4l-1.4-0.6c-1.2-0.5-2.9-1.5-2.9-3.6c0-1.9,1.5-3.8,4.2-3.8
+                       c1.5,0,2.4,0.6,2.9,1c0.4,0.3,0.8,0.8,1.1,1.4L151.4,84.9z"/>
+                   <path d="M158.5,81.8v14.3h-2.2V81.8H158.5z"/>
+                   <path d="M165.8,83.8v12.2h-2.2V83.8h-3.3v-2.1h8.7v2.1H165.8z"/>
+                   <path d="M174.5,89.9l-4.7-8.1h2.5l3.3,5.7l3.3-5.7h2.5l-4.7,8.1v6.2h-2.2V89.9z"/>
+                   <path d="M86.4,17.8V75c0,5.1-0.2,11.4-4.6,16.4c-4.4,4.8-14.2,9.8-27,9.8s-22.7-5-27-9.8c-4.4-5-4.6-11.2-4.6-16.4V17.8H0.9v61
+                       c0,7.5,2.4,16.6,13.5,24.6c7.6,5.4,20.5,11.1,40.3,11.1c19.8,0,32.7-5.7,40.3-11.1c3.6-2.6,6.3-5.3,8.3-8V81.8h2.1v10.3
+                       c2.4-4.6,3.1-9.1,3.1-13.2v-61H86.4z M100.6,96.9L90.1,86.1v10h-2.2V80.8l10.5,10.9v-9.9h2.2V96.9z M104.4,79.3
+                       c-0.9,0-1.7-0.7-1.7-1.7s0.7-1.7,1.7-1.7c0.9,0,1.7,0.7,1.7,1.7S105.4,79.3,104.4,79.3z"/>
                </g>
                </svg>
+               
                 </a>
             </div>
         </div>
@@ -180,21 +177,19 @@
             <div class="col-md-3">        
                 <a href="ux-campus-food.html">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    viewBox="0 0 298.93 78.73" enable-background="new 0 0 298.93 78.73" xml:space="preserve">
+                    viewBox="0 0 247 78.7" style="enable-background:new 0 0 247 78.7;" xml:space="preserve">
                <g>
-                   <path d="M3.73,61.8l9.8-50.2l16.24,36.26l16.38-36.26l8.82,50.2h-7.28l-4.76-28.14L29.35,63.97L15.91,33.59l-4.9,28.21H3.73z"/>
-                   <path d="M71.91,15.11v28.14c0,2.52,0.07,5.6,1.47,8.05c1.4,2.38,4.55,4.83,8.68,4.83s7.28-2.45,8.68-4.83
-                       c1.4-2.45,1.47-5.53,1.47-8.05V15.11h7.14v30.03c0,3.71-0.77,8.19-4.34,12.11c-2.45,2.66-6.58,5.46-12.95,5.46
-                       s-10.5-2.8-12.95-5.46c-3.57-3.92-4.34-8.4-4.34-12.11V15.11H71.91z"/>
-                   <path d="M110.54,61.8V11.96l33.88,35.49V15.11h7.14v49.57l-33.88-35.49V61.8H110.54z"/>
-                   <path d="M197.35,26.03c-5.18-4.69-10.01-5.18-12.67-5.18c-10.15,0-17.01,7.49-17.01,17.78c0,9.87,7.14,17.5,17.08,17.5
-                       c5.6,0,9.94-2.87,12.6-5.39v8.47c-4.69,2.8-9.59,3.5-12.81,3.5c-8.47,0-13.79-3.85-16.52-6.44c-5.46-5.11-7.49-11.06-7.49-17.64
-                       c0-8.61,3.57-14.56,7.49-18.27c4.83-4.55,10.43-6.09,16.87-6.09c4.27,0,8.4,0.77,12.46,3.36V26.03z"/>
-                   <path d="M213.3,33.59h20.02V15.11h7.14v46.7h-7.14V40.31H213.3V61.8h-7.14v-46.7h7.14V33.59z"/>
-                   <path d="M258.8,15.11v46.7h-7.14v-46.7H258.8z"/>
-                   <path d="M295.77,21.83h-18.62v11.83h18.06v6.72h-18.06v14.7h18.62v6.72H270v-46.7h25.76V21.83z"/>
+                   <path d="M3.7,61.8l9.8-50.2l16.2,36.3l16.4-36.3L55,61.8h-7.3l-4.8-28.1L29.4,64L15.9,33.6L11,61.8H3.7z"/>
+                   <path d="M71.9,15.1v28.1c0,2.5,0.1,5.6,1.5,8c1.4,2.4,4.6,4.8,8.7,4.8s7.3-2.5,8.7-4.8c1.4-2.5,1.5-5.5,1.5-8V15.1h7.1v30
+                       c0,3.7-0.8,8.2-4.3,12.1c-2.4,2.7-6.6,5.5-12.9,5.5s-10.5-2.8-12.9-5.5c-3.6-3.9-4.3-8.4-4.3-12.1v-30H71.9z"/>
+                   <path d="M110.5,61.8V12l33.9,35.5V15.1h7.1v49.6l-33.9-35.5v32.6H110.5z"/>
+                   <path d="M197.4,26c-5.2-4.7-10-5.2-12.7-5.2c-10.1,0-17,7.5-17,17.8c0,9.9,7.1,17.5,17.1,17.5c5.6,0,9.9-2.9,12.6-5.4v8.5
+                       c-4.7,2.8-9.6,3.5-12.8,3.5c-8.5,0-13.8-3.8-16.5-6.4c-5.5-5.1-7.5-11.1-7.5-17.6c0-8.6,3.6-14.6,7.5-18.3
+                       c4.8-4.6,10.4-6.1,16.9-6.1c4.3,0,8.4,0.8,12.5,3.4L197.4,26L197.4,26z"/>
+                   <path d="M213.3,33.6h20V15.1h7.1v46.7h-7.1V40.3h-20v21.5h-7.1V15.1h7.1V33.6z"/>
                </g>
                </svg>
+               
                 </a>
             </div>
             <div class="col-md-2">        
@@ -274,7 +269,20 @@
         <article class="article-4">
         <div class="row">
             <div class="col-md">
-                <a href="film.html">Film</a>
+                <a href="film.html">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 170 150" enable-background="new 0 0 170 150" xml:space="preserve">
+               <g>
+                   <path d="M29.03,79.33H10.51V97.5h17.87v6.46H10.51v30.43H4.56V72.88h24.47V79.33z"/>
+                   <path d="M48.06,13.03c5.8,0,10.14,4.98,10.14,11.62s-4.35,11.62-10.14,11.62s-10.14-4.98-10.14-11.62S42.26,13.03,48.06,13.03z
+                        M55.95,56.74v77.65H40.17V56.74H55.95z"/>
+                   <path d="M73.87,72.88v55.06h16.97v6.46H67.04V72.88H73.87z"/>
+                   <path d="M97.93,134.39l10.24-64.93l23.61,51.92l24.07-52.01l9.59,65.02h-7.01l-5.81-42.79l-20.94,45.37L111.03,91.6l-6.09,42.79
+                       H97.93z"/>
+                   <circle fill="#d11406" cx="48.11" cy="27.89" r="3.56"/>
+               </g>
+               </svg>
+                </a>
             </div>
             <div class="col-md">        
                 <a href="typography.html">Typography</a>
