--- a/projects.html
+++ b/projects.html
@@ -126,7 +126,7 @@
             </div>
             <div class="col-md-3">
                 <a href="web-university-district.html">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 181.8 136.3" style="enable-background:new 0 0 181.8 136.3;" xml:space="preserve">
                <g>
                    <path d="M103.3,104c2,0,3.7,0.2,5.3,1.4c1.7,1.3,2.7,3.4,2.7,5.8s-1,4.4-2.9,5.8c-1.7,1.2-3.2,1.4-5.2,1.4h-2.9V104
@@ -176,7 +176,7 @@
         <div class="row align-items-center justify-content-between">
             <div class="col-md-3">        
                 <a href="ux-campus-food.html">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 247 78.7" style="enable-background:new 0 0 247 78.7;" xml:space="preserve">
                <g>
                    <path d="M3.7,61.8l9.8-50.2l16.2,36.3l16.4-36.3L55,61.8h-7.3l-4.8-28.1L29.4,64L15.9,33.6L11,61.8H3.7z"/>
@@ -194,7 +194,7 @@
             </div>
             <div class="col-md-2">        
                 <a href="ux-campus-police.html">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="Layer_4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 151.82 162" enable-background="new 0 0 151.82 162" xml:space="preserve">
                <g>
                    <path d="M100.61,46.16c-0.56-3.56-1.8-7.04-4.42-10.61c-3.71-4.74-8.14-7.36-14.42-8.81c-13.46-3.09-22.24,3.34-24.39,12.67
@@ -247,16 +247,85 @@
     <!--Section & Articles-->
     <section class="database-projects">
         <article class="article-3">
-        <div class="row">
-            <div class="col-md-5">    
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md-4">    
                 <h1>DATABASE & PROGRAMMING</h1>
                 <p><q>Design adds value faster than it adds costs.</q> -- Joel Spolsky, web programmer, writer, and creator of Trello</p>
             </div>
-            <div class="col-md">        
-                <a href="database.html">Database</a>
+            <div class="col-md-3">        
+                <a href="database.html">
+                    <svg version="1.1" id="Layer_5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 281.4 130.77" enable-background="new 0 0 281.4 130.77" xml:space="preserve">
+               <g>
+                   <path d="M9.9,10.06c5.34,0,9.99,0.57,14.24,3.73c4.65,3.5,7.35,9.07,7.35,15.45c0,6.37-2.64,11.89-7.69,15.45
+                       c-4.48,3.16-8.67,3.68-14.01,3.68H1.86v-38.3H9.9z M7.72,42.85h2.53c2.87,0,6.83-0.23,10.16-2.7c2.64-2.01,5.23-5.68,5.23-10.91
+                       c0-5.05-2.41-9.02-5.17-11.03c-3.33-2.41-7.41-2.64-10.22-2.64H7.72V42.85z"/>
+                   <path d="M67.11,39.11H50.74l-4.19,9.25h-6.32L59.3,7.82l18.15,40.54h-6.32L67.11,39.11z M64.75,33.6l-5.69-12.98L53.15,33.6H64.75z
+                       "/>
+                   <path d="M99.74,15.57l-0.32,39.39l-9.85-0.03l-0.16-39.35H79.15V7.83l31.22-0.01v7.75H99.74z"/>
+                   <path d="M138.55,39.11h-16.37L118,48.36h-6.32l19.06-40.54l18.15,40.54h-6.32L138.55,39.11z M136.2,33.6l-5.69-12.98L124.6,33.6
+                       H136.2z"/>
+                   <path d="M99.42,84.25c4.02-5.23,9.45-6.03,12.57-6.03c11.16,0,20.61,8.44,20.61,22.21c0,11.66-7.44,22.52-20.51,22.52
+                       c-3.02,0-8.34-0.7-12.67-5.73v4.42h-9.85V48.37h9.85V84.25z M98.82,100.74c0,8.85,5.73,13.37,11.96,13.37
+                       c7.14,0,11.76-6.13,11.76-13.47c0-7.54-4.62-13.57-11.76-13.57C104.55,87.07,98.82,91.49,98.82,100.74z"/>
+                   <path d="M176.81,79.33h9.85v42.32h-9.85v-4.42c-4.32,5.03-9.65,5.73-12.67,5.73c-13.07,0-20.51-10.86-20.51-22.52
+                       c0-13.77,9.45-22.21,20.61-22.21c3.12,0,8.54,0.8,12.57,6.03V79.33z M153.7,100.64c0,7.34,4.62,13.47,11.76,13.47
+                       c6.23,0,11.96-4.52,11.96-13.37c0-9.25-5.73-13.67-11.96-13.67C158.32,87.07,153.7,93.1,153.7,100.64z"/>
+                   <path d="M220.64,90.48c-1.01-1.61-2.92-3.62-6.03-3.62c-1.41,0-2.41,0.5-3.02,1.11c-0.5,0.5-0.9,1.31-0.9,2.21
+                       c0,1.1,0.5,1.81,1.41,2.41c0.6,0.4,1.21,0.6,3.32,1.71l5.03,2.51c2.21,1.11,4.32,2.21,5.93,3.92c2.31,2.31,3.12,4.93,3.12,7.84
+                       c0,3.82-1.41,7.14-3.72,9.65c-3.32,3.62-7.44,4.72-11.86,4.72c-2.71,0-6.13-0.4-9.15-2.71c-2.41-1.81-4.42-4.72-5.43-7.74
+                       l8.04-3.82c0.5,1.41,1.41,3.22,2.31,4.02c0.6,0.6,2.01,1.61,4.32,1.61c1.51,0,3.12-0.5,4.02-1.41c0.8-0.8,1.41-2.11,1.41-3.32
+                       c0-1.21-0.4-2.21-1.31-3.22c-1.21-1.21-2.61-1.91-4.22-2.61l-3.62-1.71c-1.91-0.9-4.22-2.01-5.83-3.62
+                       c-2.21-2.11-3.01-4.42-3.01-7.14c0-3.42,1.31-6.73,3.52-9.05c1.91-2.01,5.13-4.02,10.35-4.02c3.01,0,5.43,0.6,7.84,2.21
+                       c1.41,0.9,3.32,2.51,4.82,5.23L220.64,90.48z"/>
+                   <path d="M279.23,112c-1.81,3.22-4.42,6.03-7.14,7.74c-3.42,2.21-7.94,3.22-12.46,3.22c-5.63,0-10.25-1.41-14.27-5.43
+                       c-4.02-4.02-6.23-9.85-6.23-16.18c0-6.53,2.31-12.87,6.73-17.39c3.52-3.52,8.14-5.73,14.17-5.73c6.74,0,11.06,2.92,13.57,5.53
+                       c5.43,5.63,5.93,13.47,5.93,17.89v1.21h-30.36c0.2,3.02,1.51,6.43,3.62,8.54c2.31,2.31,5.13,2.71,7.54,2.71
+                       c2.71,0,4.72-0.6,6.73-2.11c1.71-1.31,3.01-3.02,3.92-4.62L279.23,112z M269.48,94.81c-0.4-2.31-1.51-4.32-3.02-5.73
+                       c-1.31-1.21-3.42-2.41-6.63-2.41c-3.42,0-5.63,1.41-6.94,2.71c-1.41,1.31-2.51,3.32-3.02,5.43H269.48z"/>
+               </g>
+               </svg>
+                </a>
             </div>
-            <div class="col-md">
-                <a href="programming.html">Programming</a>
+            <div class="col-md-4">
+                <a href="programming.html">
+                    <svg version="1.1" id="Layer_6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 314.16 70.47" enable-background="new 0 0 314.16 70.47" xml:space="preserve">
+               <g>
+                   <path d="M6.25,27.79c1.64,0,3.92,0.16,5.84,1.44c2.24,1.48,3.32,4.04,3.32,6.48c0,1.56-0.4,3.96-2.6,5.84
+                       c-2.12,1.8-4.56,2.08-6.52,2.08H4.45v10.84H0.37V27.79H6.25z M4.45,39.86h1.84c3.52,0,5.2-1.72,5.2-4.2c0-1.48-0.6-4.12-5.24-4.12
+                       h-1.8V39.86z"/>
+                   <path d="M25.53,27.79c3.24,0,5.32,0.4,7.04,1.56c2.92,1.96,3.16,5.12,3.16,6.28c0,3.84-2.36,6.64-5.92,7.44l8.32,11.4h-4.92
+                       l-7.64-10.92h-0.72v10.92h-4.08V27.79H25.53z M24.85,40.02h1.28c1.12,0,5.68-0.12,5.68-4.36c0-3.76-3.56-4.12-5.56-4.12h-1.4V40.02
+                       z"/>
+                   <path d="M69.81,41.14c0,7.84-5.88,13.84-13.88,13.84s-13.88-6-13.88-13.84c0-7.84,5.88-13.84,13.88-13.84S69.81,33.31,69.81,41.14z
+                        M65.73,41.14c0-5.92-4.08-10.08-9.8-10.08s-9.8,4.16-9.8,10.08c0,5.92,4.08,10.08,9.8,10.08S65.73,47.06,65.73,41.14z"/>
+                   <g>
+                       <path d="M100.69,34.25h19.25v0.35c0,7.98-2.38,14.49-6.93,18.9c-4.83,4.69-10.57,5.95-15.89,5.95c-6.79,0-11.62-1.96-15.89-6.37
+                           c-4.55-4.69-6.93-10.92-6.93-17.64c0-7.28,2.94-13.58,6.79-17.43c3.99-4.06,10.36-7,17.57-7c4.2,0,8.54,0.91,12.18,2.94
+                           c3.85,2.17,6.23,4.9,7.56,7l-5.67,3.99c-1.4-1.96-3.5-4.06-5.74-5.32c-2.59-1.54-5.39-2.03-8.26-2.03
+                           c-6.09,0-10.01,2.52-12.32,4.83c-3.08,3.08-4.97,8.05-4.97,13.09c0,4.69,1.75,9.38,4.83,12.67c3.22,3.43,7.21,4.69,11.69,4.69
+                           c4.06,0,7.42-1.19,10.43-4.13c2.59-2.52,3.64-5.25,3.92-7.91h-11.62V34.25z"/>
+                   </g>
+                   <path d="M130.47,27.79c3.24,0,5.32,0.4,7.04,1.56c2.92,1.96,3.16,5.12,3.16,6.28c0,3.84-2.36,6.64-5.92,7.44l8.32,11.4h-4.92
+                       l-7.64-10.92h-0.72v10.92h-4.08V27.79H130.47z M129.79,40.02h1.28c1.12,0,5.68-0.12,5.68-4.36c0-3.76-3.56-4.12-5.56-4.12h-1.4
+                       V40.02z"/>
+                   <path d="M163.95,48.02h-11.4l-2.92,6.44h-4.4l13.28-28.24l12.64,28.24h-4.4L163.95,48.02z M162.31,44.18l-3.96-9.04l-4.12,9.04
+                       H162.31z"/>
+                   <path d="M174.91,54.46l5.6-28.68l9.28,20.72l9.36-20.72l5.04,28.68h-4.16l-2.72-16.08l-7.76,17.32l-7.68-17.36l-2.8,16.12H174.91z"
+                       />
+                   <path d="M210.19,54.46l5.6-28.68l9.28,20.72l9.36-20.72l5.04,28.68h-4.16l-2.72-16.08l-7.76,17.32l-7.68-17.36l-2.8,16.12H210.19z"
+                       />
+                   <path d="M250.35,27.79v26.68h-4.08V27.79H250.35z"/>
+                   <path d="M257.95,54.46V25.99l19.36,20.28V27.79h4.08V56.1l-19.36-20.28v18.64H257.95z"/>
+                   <path d="M302.79,40.58h11v0.2c0,4.56-1.36,8.28-3.96,10.8c-2.76,2.68-6.04,3.4-9.08,3.4c-3.88,0-6.64-1.12-9.08-3.64
+                       c-2.6-2.68-3.96-6.24-3.96-10.08c0-4.16,1.68-7.76,3.88-9.96c2.28-2.32,5.92-4,10.04-4c2.4,0,4.88,0.52,6.96,1.68
+                       c2.2,1.24,3.56,2.8,4.32,4l-3.24,2.28c-0.8-1.12-2-2.32-3.28-3.04c-1.48-0.88-3.08-1.16-4.72-1.16c-3.48,0-5.72,1.44-7.04,2.76
+                       c-1.76,1.76-2.84,4.6-2.84,7.48c0,2.68,1,5.36,2.76,7.24c1.84,1.96,4.12,2.68,6.68,2.68c2.32,0,4.24-0.68,5.96-2.36
+                       c1.48-1.44,2.08-3,2.24-4.52h-6.64V40.58z"/>
+               </g>
+               </svg>
+                </a>
             </div>
         </div>
         </article>
@@ -267,25 +336,54 @@
     <!--Section & Articles-->
     <section class="communication-skills">
         <article class="article-4">
-        <div class="row">
-            <div class="col-md">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md-3">
                 <a href="film.html">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    viewBox="0 0 170 150" enable-background="new 0 0 170 150" xml:space="preserve">
+                    <svg version="1.1" id="Layer_7" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 170 130" enable-background="new 0 0 170 130" xml:space="preserve">
                <g>
-                   <path d="M29.03,79.33H10.51V97.5h17.87v6.46H10.51v30.43H4.56V72.88h24.47V79.33z"/>
-                   <path d="M48.06,13.03c5.8,0,10.14,4.98,10.14,11.62s-4.35,11.62-10.14,11.62s-10.14-4.98-10.14-11.62S42.26,13.03,48.06,13.03z
-                        M55.95,56.74v77.65H40.17V56.74H55.95z"/>
-                   <path d="M73.87,72.88v55.06h16.97v6.46H67.04V72.88H73.87z"/>
-                   <path d="M97.93,134.39l10.24-64.93l23.61,51.92l24.07-52.01l9.59,65.02h-7.01l-5.81-42.79l-20.94,45.37L111.03,91.6l-6.09,42.79
+                   <path d="M29.03,69.33H10.51V87.5h17.87v6.46H10.51v30.43H4.56V62.88h24.47C29.03,62.88,29.03,69.33,29.03,69.33z"/>
+                   <path d="M48.06,3.03c5.8,0,10.14,4.98,10.14,11.62s-4.35,11.62-10.14,11.62s-10.14-4.98-10.14-11.62S42.26,3.03,48.06,3.03z
+                        M55.95,46.74v77.65H40.17V46.74H55.95z"/>
+                   <path d="M73.87,62.88v55.06h16.97v6.46h-23.8V62.88H73.87z"/>
+                   <path d="M97.93,124.39l10.24-64.93l23.61,51.92l24.07-52.01l9.59,65.02h-7.01l-5.81-42.79l-20.94,45.37L111.03,81.6l-6.09,42.79
                        H97.93z"/>
-                   <circle fill="#d11406" cx="48.11" cy="27.89" r="3.56"/>
+                   <circle fill="#d11406" cx="48.11" cy="17.89" r="3.56"/>
                </g>
                </svg>
                 </a>
             </div>
-            <div class="col-md">        
-                <a href="typography.html">Typography</a>
+            <div class="col-md-3">        
+                <a href="typography.html">
+                    <svg version="1.1" id="Layer_8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 200 158.64" enable-background="new 0 0 200 158.64" xml:space="preserve">
+               <g>
+                   <path d="M59.99,121.3c3.35,0,6.15,0.4,8.4,2.35c2.45,2.1,3.05,5.05,3.05,7.15c0,4.7-2.95,9.35-10.55,9.35h-3.25v14.51h-3.7V121.3
+                       H59.99z M57.63,136.66h3.05c4.4,0,7.05-2.2,7.05-6.05c0-5.3-4.95-5.8-7.35-5.8h-2.75V136.66z"/>
+                   <path d="M86.44,134.86h17.11V121.3h3.7v33.36h-3.7v-16.31H86.44v16.31h-3.7V121.3h3.7V134.86z"/>
+                   <path d="M128.91,140.3l-10.95-19.01h4.3l8.5,14.91l8.6-14.91h4.3l-11.05,19.01v14.36h-3.7L128.91,140.3L128.91,140.3z"/>
+                   <path d="M40.28,78.44h27.81v1.6c0,7.4-2.2,15.41-6.4,21.11c-2,2.7-9.5,12-24.81,12c-19.81,0-34.61-15.11-34.61-34.51
+                       c0-19.41,14.91-34.51,34.81-34.51c6.4,0,13.9,1.6,20.41,6.6c3,2.3,5.8,5.3,7.7,7.9l-5.5,5c-1.9-2.7-4.1-5.1-6.3-6.9
+                       c-3.2-2.6-8.2-5.6-16.21-5.6c-16.11,0-27.31,12.1-27.31,27.61c0,18.21,14.51,27.41,27.11,27.41c8.9,0,16.61-4.5,20.41-11.2
+                       c1.2-2.1,2.5-5.3,2.7-9.5H40.28V78.44z"/>
+                   <path d="M92.4,45.23c4.5,0,11.2,0.3,16.21,3.7c3.9,2.6,7.3,7.7,7.3,14.81c0,10.2-6.7,17.71-16.81,18.41l21.21,29.81h-9L91,82.74
+                       h-1.9v29.21h-7.4V45.23H92.4z M89.1,76.14h4.7c9.2,0,14.71-4.4,14.71-12.2c0-3.7-1.1-7.4-5.3-9.8c-3-1.7-6.4-1.9-9.6-1.9h-4.5
+                       L89.1,76.14L89.1,76.14z"/>
+                   <path opacity="0.58" enable-background="new    " d="M128.31,78.64c0-19.91,15.51-34.51,34.71-34.51s34.71,14.61,34.71,34.51
+                       c0,19.81-15.4,34.51-34.71,34.51S128.31,98.45,128.31,78.64z M135.91,78.64c0,15.31,12.1,27.51,27.11,27.51s27.11-12.2,27.11-27.51
+                       s-12.1-27.51-27.11-27.51C148.02,51.13,135.91,63.33,135.91,78.64z"/>
+                   <path d="M47.51,7.97v29.86h-3.7V7.97H35.7v-3.5h19.91v3.5H47.51z"/>
+                   <path d="M74.71,23.47l-10.95-19h4.3l8.5,14.91l8.6-14.91h4.3l-11.04,19v14.36h-3.7V23.47H74.71z"/>
+                   <path d="M106.22,4.47c3.35,0,6.15,0.4,8.4,2.35c2.45,2.1,3.05,5.05,3.05,7.15c0,4.7-2.95,9.35-10.55,9.35h-3.25v14.51h-3.7V4.47
+                       H106.22z M103.88,19.82h3.05c4.4,0,7.05-2.2,7.05-6.05c0-5.3-4.95-5.8-7.35-5.8h-2.75C103.88,7.97,103.88,19.82,103.88,19.82z"/>
+                   <path d="M127.18,21.15c0-9.95,7.75-17.26,17.36-17.26c9.6,0,17.36,7.3,17.36,17.26c0,9.9-7.7,17.26-17.36,17.26
+                       S127.18,31.06,127.18,21.15z M130.99,21.15c0,7.65,6.05,13.75,13.55,13.75s13.56-6.1,13.56-13.75S152.04,7.4,144.54,7.4
+                       C137.04,7.4,130.99,13.5,130.99,21.15z"/>
+                   <path d="M171.51,84.86h-15.2l-4.28,10.06h-4.39l16.43-37.41l16,37.41h-4.39L171.51,84.86z M169.96,81.11l-5.99-14.29l-6.1,14.29
+                       H169.96z"/>
+               </g>
+               </svg>               
+                </a>
             </div>
             <div class="col-md-5">    
                 <h1>COMMUNICATION</h1>
@@ -302,13 +400,13 @@
     <!--Section & Articles-->
     <section class="writing-skills">
         <article class="article-5">
-        <div class="row align-items-center">
+        <div class="row align-items-center justify-content-between">
             <div class="col-md-5">    
                 <h1>WRITING</h1>
                 <p><q>Design is intelligence made visible.</q> -- Alina Wheeler, author</p>
                 <p><q>Every great design begins with an even better story.</q> -- Lorinda Mamo, designer and creative director</p></div>
             <div class="col-md">        
-                <a href="technical-doc.html"><svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                <a href="technical-doc.html"><svg version="1.1" id="Layer_9" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 400 130.77" enable-background="new 0 0 400 130.77" xml:space="preserve">
                <g>
                    <path d="M6.52,35.18v13.24H2.6V35.18H0.96v-3.6H2.6v-6.16h3.92v6.16h3v3.6H6.52z"/>
@@ -366,7 +464,7 @@
             </div>
             <div class="col-md">        
                 <a href="reflection.html">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    <svg version="1.1" id="Layer_10" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 281.4 130.77" enable-background="new 0 0 281.4 130.77" xml:space="preserve">
                <g>
                    <path d="M66.94,69.51v24.43H61.9V69.51h-2.8v-4.62h2.8V52.22c0-2.66,0.21-6.02,2.8-8.19c1.4-1.19,3.5-1.89,5.81-1.89
