--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -15,8 +15,8 @@
     <header class="primary">
         <nav class="navbar bg-light">
             <div class="container text-muted border-bottom">
-              <a class="navbar-brand" href="#">
-                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+              <a class="navbar-brand" href="index.html">
+                <img class="jaw-brand" src="assets/images/jaw-brand.png" alt="JAW"></a>
                 <ul class="nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">PROJECTS</a>
@@ -49,7 +49,10 @@
             <dd>As the project manager, I was responsible for managing all project tasks, scheduling, and communication regarding our 
               project. Later, my primary responsibility became mobile css development.</dd>
           </dl>
-          <a href="" target="blank">Visit the site,</a><span class="mobile-message"> but don't stop there. Check it out on mobile, too!</span>
+          <p><a href="" target="blank">Visit the site</a><span class="mobile-message">, but don't stop there. Check it out on mobile, too!</p>
+          <div class="wrap">
+            <img src="assets/images/canoeing.webp">
+          </div>
         </div>
         <div class="col-md-3">
           <img src="assets/images/mobile-buffalo.gif" alt="an illustration of the buffalo river website on a mobile phone. Also includes an animation of the menu sliding open from left to right.">
