--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -34,7 +34,7 @@
     <div class="container web-buffalo">
       <div class="row feature">
         <div class="col-md">
-          <img src="assets/images/buffalo-web.webp">
+          <img src="assets/images/buffalo-web.webp" alt="a preview of the buffalo river website homepage">
         </div>
       </div>
     <section class="info">
@@ -49,13 +49,13 @@
             <dd>As the project manager, I was responsible for managing all project tasks, scheduling, and communication regarding our 
               project. Later, my primary responsibility became mobile css development.</dd>
           </dl>
-          <p><a href="" target="blank">Visit the site</a><span class="mobile-message">, but don't stop there. Check it out on mobile, too!</p>
+          <p><a href="" target="blank">Visit the site</a>.</p>
           <div class="wrap">
-            <img src="assets/images/canoeing.webp">
+            <img src="assets/images/canoeing.webp" alt="woman canoeing on the buffalo river in arkansas">
           </div>
         </div>
         <div class="col-md-3">
-          <img src="assets/images/mobile-buffalo.gif" alt="an illustration of the buffalo river website on a mobile phone. Also includes an animation of the menu sliding open from left to right.">
+          <img src="assets/images/mobile-buffalo.gif" alt="an animated illustration of the buffalo river website on a mobile phone with a mobile menu sliding open from left to right">
         </div>
       </div>
     </article>
