--- a/web-university-district.html
+++ b/web-university-district.html
@@ -15,8 +15,8 @@
     <header class="primary">
         <nav class="navbar bg-light">
             <div class="container text-muted border-bottom">
-              <a class="navbar-brand" href="#">
-                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+              <a class="navbar-brand" href="index.html">
+                <img class="jaw-brand" src="assets/images/jaw-brand.png" alt="JAW"></a>
                 <ul class="nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">PROJECTS</a>
@@ -34,23 +34,24 @@
   <div class="container web-ud">
     <div class="row feature">
       <div class="col-md">
-        <img src="assets/images/ud-web.webp">
+        <img src="assets/images/ud-web.webp" alt="a preview of the university district website homepage">
       </div>
     </div>
     <section class="info">
     <article class="article-1">
     <div class="row justify-content-between">
-      <div class="col-md-6">
+      <div class="col-md-7">
         <h1>UNIVERSITY DISTRICT 2022</h1>
         <p>A wordpress website collaboration for the UALR University District Parnership to market the University District as a destination, to 
         encourage development, and to promote the business and services within the area.</p>
-        <p>Stylistic choices were made to...</p>
           <dl>
             <dt>My Role</dt>
-            <dd>As the project manager, I was responsible for managing all project tasks, scheduling, and communication regarding our 
-            project. Later, my primary responsibility became mobile css development.</dd>
+            <dd>As the UX developer, I was responsible for designing the website (and prototype) using UI/UX principles and for developing the wordpress layouts.</dd>
           </dl>
-          <a href="" target="blank">Visit the site.</a>
+          <p><a href="" target="blank">Visit the site</a>.</p>
+          <div class="wrap">
+            <img src="assets/images/ud-heart.webp" alt="hand holding a plastic heart">
+          </div>
       </div>
       <div class="col-md-3">
         <img src="assets/images/mobile-ud.png" alt="an illustration of the university district website on a mobile phone">
