--- a/database.html
+++ b/database.html
@@ -34,6 +34,11 @@
 <!--JUMBOTRON HERE-->
 <!--SECTION/ARTICES-->
   <div class="container database">
+    <div class="row feature">
+      <div class="col-12">
+        <img src="assets/images/google.webp" class="img-fluid" alt="google sheet image of database assessment">
+      </div>
+  </div>
     <section class="info">
       <article class="article-1">
     <div class="row gx-5 justify-content-between">
@@ -43,8 +48,8 @@
           Microsoft excel, but there's not harm getting comfy using Google Sheets, too. So here are a 
           couple of exercies that I completed within Google Sheets while attending ITEC 3610: Intro to IT & Apps. To the right is an 
           image of a database assessment that I completed.</P>
-        <a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">
-          Check it out on Google Sheets.</a>
+        <p><a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">
+          Check it out on Google Sheets</a>.</p>
       </div>
       <div class="col-md">
         <img src="assets/images/database-assessment.1.webp" class="img-fluid" alt="google sheet image of database assessment">
