--- a/database.html
+++ b/database.html
@@ -15,8 +15,8 @@
     <header class="primary">
         <nav class="navbar bg-light">
             <div class="container text-muted border-bottom">
-              <a class="navbar-brand" href="#">
-                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+              <a class="navbar-brand" href="index.html">
+                <img class="jaw-brand" src="assets/images/jaw-brand.png" alt="JAW"></a>
                 <ul class="nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">PROJECTS</a>
@@ -36,7 +36,7 @@
   <div class="container database">
     <div class="row feature">
       <div class="col-12">
-        <img src="assets/images/google.webp" class="img-fluid" alt="google sheet image of database assessment">
+        <img src="assets/images/google.webp" class="img-fluid" alt="google workspace homepage">
       </div>
   </div>
     <section class="info">
@@ -45,14 +45,14 @@
       <div class="col-md-5">
         <h1>GETTING TO KNOW GOOGLE SHEETS</h1>
         <P>Part of the Web Development program at UALR is to learn and utilize the tools within Google Workspace. I'm great with
-          Microsoft excel, but there's not harm getting comfy using Google Sheets, too. So here are a 
+          Microsoft excel, but there's no harm in getting comfy using Google Sheets, too. So here are a 
           couple of exercies that I completed within Google Sheets while attending ITEC 3610: Intro to IT & Apps. To the right is an 
           image of a database assessment that I completed.</P>
         <p><a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">
           Check it out on Google Sheets</a>.</p>
       </div>
       <div class="col-md">
-        <img src="assets/images/database-assessment.1.webp" class="img-fluid" alt="google sheet image of database assessment">
+        <img src="assets/images/database-assessment.1.webp" class="img-fluid" alt="a google sheet database assessment">
       </div>
     </div>
     </article>
@@ -60,7 +60,7 @@
     <article class="article-2">
     <div class="row gx-5 justify-content-between">
       <div class="col-md">
-        <img src="assets/images/database-inventory.1.webp" class="img-fluid" alt="google sheet image of inventory database">
+        <img src="assets/images/database-inventory.1.webp" class="img-fluid" alt="a google sheet inventory database">
       </div>
       <div class="col-md-5">
         <h1>INVENTORY DATABASE</h1>
