--- a/film.html
+++ b/film.html
@@ -35,7 +35,7 @@
     <div class="container film">
         <div class="row feature">
           <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/4Z8RX-mrl3I" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
+          <iframe id="guardianship" class="embed-responsive-item youtube" src="https://www.youtube.com/embed/4Z8RX-mrl3I" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
           </div>
         </div>
       <section class="info">
@@ -43,11 +43,11 @@
         <div class="row justify-content-between">
             <div class="col-md-6">
                 <h1>MEDIA PRODUCTION</h1>
-                <p>Ok, so hear me; I still may not be great at holding a camera, <b>but</b> I've gotten pretty good at developing a narrative. Here
-                  are a few short films that I scripted, storyboared, edited, and filmed (with some help on the filming part) as projects for courses, Intro To Media Production (2020) & Non-Linear Video Editing (2022).</p>
-                <p><em>Kinship Legal Guardianship</em> is an informative film explaining the process to legal guardianship.</p>
-                <p><em>'Cause That's What I Do</em> is a feature film that tells a fictional story.</p>
-                <p><em>Can't Escape The Mischief</em> is an feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
+                <p>Ok, so I still may not be great at holding a camera, <b>but</b> I've gotten pretty good at developing a narrative. Here
+                  are a few short films that I scripted, storyboarded, edited, and filmed (with some help on the filming part) as projects for courses, Intro To Media Production (2020) & Non-Linear Video Editing (2022).</p>
+                <p><a href="#guardianship"><em>Kinship Legal Guardianship</em></a> -- an informative film explaining the process to legal guardianship.</p>
+                <p><a href="#cause"><em>'Cause That's What I Do</em></a> -- a feature film that tells a fictional story.</p>
+                <p><a href="#mischief"><em>Can't Escape The Mischief</em></a> -- a feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
             </div>
             <div class="col-md-4">
                 <img src="assets/images/film.png" class="img-fluid" alt="three faded film strips arranged horizontally">
@@ -60,7 +60,7 @@
         <div class="row">
           <div class="col">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/6GWVHu-B-M0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
+              <iframe id="cause" class="embed-responsive-item youtube" src="https://www.youtube.com/embed/6GWVHu-B-M0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
             </div>
           </div>
       </div>
@@ -70,7 +70,7 @@
         <div class="row">
           <div class="col">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/HrDH4A2vrqs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+              <iframe id="mischief" class="embed-responsive-item youtube" src="https://www.youtube.com/embed/HrDH4A2vrqs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
             </div>
           </div>
         </div>
