--- a/film.html
+++ b/film.html
@@ -15,8 +15,8 @@
     <header class="primary">
         <nav class="navbar bg-light">
             <div class="container text-muted border-bottom">
-              <a class="navbar-brand" href="#">
-                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+              <a class="navbar-brand" href="index.html">
+                <img class="jaw-brand" src="assets/images/jaw-brand.png" alt="JAW"></a>
                 <ul class="nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">PROJECTS</a>
